# oraclarr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.example.yml  pyproject.toml  server.json
.github/workflows/: docker-publish.yml  publish-pypi.yml
src/oraclarr_mcp/: __main__.py  config.py  errors.py  guards.py  models.py  registry.py  server.py
src/oraclarr_mcp/clients/: arr.py  base.py  profilarr.py  prowlarr.py  qbittorrent.py  tdarr.py
src/oraclarr_mcp/tools/: _arr.py  _util.py  diagnose.py  explain_decision.py  health.py  history.py  indexers.py  quality_config.py  queues.py  search.py  transcodes.py  wanted.py
tests/: conftest.py  test_config.py  test_errors.py  test_guards.py  test_main.py  test_models.py  test_registry.py  test_server.py
tests/clients/: test_arr.py  test_base.py  test_profilarr.py  test_prowlarr.py  test_qbittorrent.py  test_tdarr.py
tests/fixtures/: profilarr_arr.json  profilarr_status.json  sonarr_history_series.json  sonarr_queue.json  sonarr_status.json
tests/tools/: test_arr_read_tools.py  test_diagnose.py  test_explain_decision.py  test_health.py  test_indexers_transcodes.py  test_quality_config.py  test_queues.py
