[project]
name = "oraclarr-mcp"
version = "0.1.0"
description = "Read-only diagnostic MCP server for the arr media stack"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
oraclarr-mcp = "oraclarr_mcp.__main__:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraclarr_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# Compact one-line fake-client stubs (name=...; type=...) are idiomatic in tests.
"tests/**" = ["E702"]
